Fold the long 'where' rules.
We want the YAML parser to ignore the newline, the line is only
wrapped for readability.

--- a/docs/pages/access-controls/guides/impersonation.mdx
+++ b/docs/pages/access-controls/guides/impersonation.mdx
@@ -184,7 +184,7 @@ spec:
     impersonate:
       users: ['*']
       roles: ['*']
-      where: |
+      where: >
         equals(impersonate_role.metadata.labels["group"], "security") && 
         equals(impersonate_user.metadata.labels["group"], "security")
 
@@ -260,7 +260,7 @@ spec:
     impersonate:
       users: ['*']
       roles: ['*']
-      where: |
+      where: >
         contains(user.spec.traits["group"], impersonate_role.metadata.labels["group"]) && 
         contains(user.spec.traits["group"], impersonate_user.metadata.labels["group"])
 
