--- a/docs/pages/access-controls/guides/impersonation.mdx
+++ b/docs/pages/access-controls/guides/impersonation.mdx
@@ -20,7 +20,7 @@ non-interactive CI/CD user Jenkins and a security scanner.
 
 (!docs/pages/includes/tctl.mdx!)
 
-## Step 1: Create a CI/CD user and corresponding role
+## Step 1/3: Create a CI/CD user and corresponding role
 
 First, let's create a role called `jenkins`. Notice the `max_session_ttl`
 parameter, which limits the cert duration for certificates issued to users with
@@ -68,7 +68,7 @@ spec:
   ```
 </Admonition>
 
-## Step 2: Create an impersonator role
+## Step 2/3: Create an impersonator role
 
 Let's create a role `impersonator`. Users with this role will be permitted to
 impersonate the `jenkins` user and role.
@@ -104,7 +104,6 @@ spec:
 Next, create an interactive user `alice` and assign the impersonator role so
 that `alice` can impersonate `jenkins`. 
 
-
 <Admonition
   type="note"
   title="Access Role"
@@ -117,7 +116,7 @@ Alice's convenience.
 $ tctl users add alice  --roles=impersonator,access
 ```
 
-## Step 3: Use impersonation to issue a certificate
+## Step 3/3: Use impersonation to issue a certificate
 
 Alice can login using `tsh` and issue a cert for `jenkins`:
 
