--- a/docs/pages/access-controls/guides/impersonation.mdx
+++ b/docs/pages/access-controls/guides/impersonation.mdx
@@ -5,12 +5,13 @@ description: How to issue short-lived certs on behalf of Teleport users using im
 
 # Impersonation
 
-Sometimes users need to create short-lived certificates for non-interactive users, for example, CI/CD systems.
-Your programs interacting with Teleport may need to create their own authentication as well.
-Teleport's impersonation allows users and robots to create short-lived certs for other users and roles.
+Sometimes users need to create short-lived certificates for non-interactive
+users, for example, CI/CD systems. Your programs interacting with Teleport may
+need to create their own authentication as well. Teleport's impersonation allows
+users and robots to create short-lived certs for other users and roles.
 
-Let's explore how interactive user Alice can create credentials for a non-interactive
-CI/CD user Jenkins and a security scanner.
+Let's explore how interactive user Alice can create credentials for a
+non-interactive CI/CD user Jenkins and a security scanner.
 
 ## Prerequisites
 
@@ -19,12 +20,15 @@ CI/CD user Jenkins and a security scanner.
 
 (!docs/pages/includes/tctl.mdx!)
 
-## Step 1/3. Create a CI/CD user
+## Step 1/3: Create a CI/CD user and corresponding role
 
-First, let's create a user `jenkins`. Notice parameter `max_session_ttl` that limits
-cert duration for this user at 10 days. As a rule of thumb, the shorter the TTL, the better.
+First, let's create a role called `jenkins`. Notice the `max_session_ttl`
+parameter, which limits the cert duration for certificates issued to users with
+this role. As a rule of thumb, the shorter the TTL, the better.
 
-Save this file as `jenkins.yaml` and create a user and a role:
+Next, we'll create a user also named `jenkins` and assign the role to the user.
+
+Save this file as `jenkins.yaml` to create the user and role:
 
 ```yaml
 kind: role
@@ -64,9 +68,12 @@ spec:
   ```
 </Admonition>
 
-## Step 2/3. Create an impersonator
+## Step 2/3: Create an impersonator role
 
-Let's create a role `impersonator`. Save this role as `impersonator.yaml`:
+Let's create a role `impersonator`. Users with this role will be permitted to
+impersonate the `jenkins` user and role.
+
+Save this role definition as `impersonator.yaml`:
 
 ```yaml
 kind: role
@@ -94,13 +101,22 @@ spec:
       '*': '*'
 ```
 
-Create an interactive user `alice` who can access the cluster
-and impersonate `jenkins`. We assigned a preset `access` role that allows users to access clusters for
+Next, create an interactive user `alice` and assign the impersonator role so
+that `alice` can impersonate `jenkins`. 
+
+<Admonition
+  type="note"
+  title="Access Role"
+>
+We also assign the preset `access` role that allows users to access clusters for
 Alice's convenience.
+</Admonition>
 
 ```code
 $ tctl users add alice  --roles=impersonator,access
 ```
+
+## Step 3/3: Use impersonation to issue a certificate
 
 Alice can login using `tsh` and issue a cert for `jenkins`:
 
@@ -133,26 +149,33 @@ $ ssh -J jenkins@teleport.localhost:3023 -p 3022 jenkins@127.0.0.1
   about impersonator - `alice`.
 </Admonition>
 
-## Step 3/3. Dynamic impersonation
+## Advanced
+
+### Impersonation Rules
 
 To prevent unintended consequences, Teleport defines the following impersonation rules:
 
-- Even though Alice's `max_session_ttl` is 10 hours, she can issue a cert with a longer TTL of 240 hours,
-because `jenkins` role allows it. A certificate's TTL issued using impersonation is limited to the `max_session_ttl` of the roles being impersonated.
-- Even in case if `jenkins` role could impersonate some other roles, Alice would not be able
-to use this permission. Teleport prevents impersonating users recursively.
-- Alice can get a new `jenkins` certificate with the same TTL, but metadata updated, for example
-pointing to a different Teleport leaf cluster.
-Teleport allows impersonated users to renew their certificates with the reduced scope of the certificate.
+- Even though Alice's `max_session_ttl` is 10 hours, she can issue a cert with a
+  longer TTL of 240 hours, because the `jenkins` role allows it. A certificate's
+  TTL issued using impersonation is extended to the maximum TTL of the roles
+  being impersonated.
+- Even if the `jenkins` role could impersonate some other roles, Alice would not
+  be able to use this permission. Teleport prevents recursive impersonation.
+- Alice can get a new `jenkins` certificate with the same TTL, but metadata
+  updated, for example pointing to a different Teleport leaf cluster. Teleport
+  allows impersonated users to renew their certificates with the reduced scope
+  of the certificate.
 
-## Step 3/3 Dynamic Impersonation
+### Dynamic Impersonation
 
 Sometimes you don't know in advance what roles will be created by the system.
 
-You can use `where` condition to allow one role to impersonate other roles
+You can use the `where` condition to allow one role to impersonate other roles
 based on matching labels.
 
-Save the role `security-impersonator` in a file `security-impersonator.yaml` and create it using `tctl`.
+For example, suppose you wanted to define a `security-impersonator` role that
+allowed the impersonation of any users or roles with the label
+`group: security`. This could be accomplished with the folowing role definition:
 
 ```yaml
 kind: role
@@ -163,12 +186,14 @@ spec:
   options:
     max_session_ttl: 10h
 
-  # Allow security-impersonator to impersonate any user and role with group: security label
+  # security-impersonator can impersonate any user or role with the 'group: security' label
   allow:
     impersonate:
       users: ['*']
       roles: ['*']
-      where: 'equals(impersonate_role.metadata.labels["group"], "security") && equals(impersonate_user.metadata.labels["group"], "security")'
+      where: >
+        equals(impersonate_role.metadata.labels["group"], "security") && 
+        equals(impersonate_user.metadata.labels["group"], "security")
 
   # The deny section uses the identical format as the 'allow' section.
   # The deny rules always override allow rules.
@@ -184,13 +209,14 @@ $ tctl users update alice --set-roles=security-impersonator,access
 
 Alice can now impersonate any role and user with a label `group: security`.
 
-Create a user and a role `security-scanner`. Save a file `security-scanner.yaml` and create user and group:
+Now suppose we need to create another machine user for a security scanning tool.
+Create a user and a role `security-scanner` using the following template:
 
 ```yaml
 kind: role
 version: v3
 metadata:
-  name: scanner
+  name: security-scanner
   labels:
     group: security
 spec:
@@ -212,7 +238,9 @@ spec:
   roles: ['security-scanner']
 ```
 
-Alice can issue certificates for a security scanner:
+Even though this role was created after Alice's user was configured, Alice can
+issue certificates for the `security-scanner` user because it is labeled with
+the `group: security` label.
 
 ```code
 $ tctl auth sign --user=security-scanner --format=openssh --out=security-scanner --ttl=10h
@@ -220,7 +248,11 @@ $ tctl auth sign --user=security-scanner --format=openssh --out=security-scanner
 
 **Matching user traits**
 
-We can make the `security-impersonator` role more flexible by matching source user and target role parameters:
+We can also define impersonation rules by matching against user traits.
+
+Here we update the `security-impersonator` role to allow for the impersonation
+of any other users or roles where the `group` user trait contains the same value
+as the label on the role and/or user to impersonate:
 
 ```yaml
 kind: role
@@ -235,7 +267,9 @@ spec:
     impersonate:
       users: ['*']
       roles: ['*']
-      where: 'contains(user.spec.traits["group"], impersonate_role.metadata.labels["group"]) && contains(user.spec.traits["group"], impersonate_user.metadata.labels["group"])'
+      where: >
+        contains(user.spec.traits["group"], impersonate_role.metadata.labels["group"]) && 
+        contains(user.spec.traits["group"], impersonate_user.metadata.labels["group"])
 
   # The deny section uses the identical format as the 'allow' section.
   # The deny rules always override allow rules.
@@ -244,8 +278,8 @@ spec:
       '*': '*'
 ```
 
-This role will work with SSO users, but we can test locally, by updating Alice's account
-entry with traits:
+While user traits typically come from an external identity provider, we can test
+with local user `alice` by manually updating Alices's account with traits.
 
 ```yaml
 kind: user
@@ -259,6 +293,17 @@ spec:
   - security-impersonator
   - access
 ```
+
+Since Alice's `group` trait contains `security`, and the `security-scanner` user
+has a label of `group: security`, Alice will be able to impersonate the security
+scanner.
+
+<Admonition
+  type="note"
+  title="Login"
+>
+Alice will need to log in again to receive the newly updated traits.
+</Admonition>
 
 ```code
 # Once Alice logs in again, she will receive a new certificate with updated roles.
