Update mongodb videos

--- a/docs/pages/database-access/guides/mongodb-self-hosted.mdx
+++ b/docs/pages/database-access/guides/mongodb-self-hosted.mdx
@@ -1,7 +1,7 @@
 ---
 title: Database Access with Self-Hosted MongoDB
 description: How to configure Teleport Database Access with self-hosted MongoDB.
-videoBanner: mu_ZKTjnFJ8
+videoBanner: 6lgVObxoLkc
 ---
 
 # Self-Hosted MongoDB
