Cleanup docs on users and roles
- Updates roles to use v4
- Moves users to a separate guide
- Creates up to date reference for users and roles resources

--- a/docs/pages/architecture/overview.mdx
+++ b/docs/pages/architecture/overview.mdx
@@ -203,7 +203,7 @@ API which provides access to information about nodes and users in the cluster.
 ![User Granted Node Access](../../img/user_node_access.svg)
 
 The node requests the Auth Server to provide a list of [OS users (user
-mappings)](../admin-guide.mdx#adding-and-deleting-users) for the connecting client, to make sure the client is
+mappings)](../setup/admin/users.mdx) for the connecting client, to make sure the client is
 authorized to use the requested OS login.
 
 Finally, the client is authorized to create an SSH connection to a node.
