--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -313,7 +313,7 @@ Check out our collection of step-by-step guides for common Teleport tasks.
 - [Install Teleport](../installation.mdx)
 - [Admin Guide](../admin-guide.mdx)
 - [Share Sessions](../user-manual.mdx#sharing-sessions)
-- [Manage Users](../admin-guide.mdx#adding-and-deleting-users)
+- [Manage Users](../setup/admin/users.mdx)
 - [Github SSO](../admin-guide.mdx#github-oauth-20)
 - [Label Nodes](../admin-guide.mdx#labeling-nodes-and-applications)
 - [Teleport with OpenSSH](../server-access/guides/openssh.mdx)
