--- a/docs/pages/enterprise/workflow/index.mdx
+++ b/docs/pages/enterprise/workflow/index.mdx
@@ -24,6 +24,7 @@ This role allows the contractor to request the role DBA.
 
 ```yaml
 kind: role
+version: v4
 metadata:
   name: contractor
 spec:
@@ -42,6 +43,7 @@ This role allows the contractor to request the role DBA.
 
 ```yaml
 kind: role
+version: v4
 metadata:
   name: dba
 spec:
@@ -60,6 +62,7 @@ This role allows the admin to approve the contractor's request.
 
 ```yaml
 kind: role
+version: v4
 metadata:
   name: admin
 spec:
@@ -114,6 +117,7 @@ the permission of the `dba`.
 # Example role that explicitly denies a contractor from requesting the admin
 # role.
 kind: role
+version: v4
 metadata:
 name: contractor
 spec:
