updted Helm install guide in installation page. -  link to getting started with kubernetes access page to refer Helm which is more up to date guide - removed  which shows deprecated warning

--- a/docs/pages/installation.mdx
+++ b/docs/pages/installation.mdx
@@ -86,11 +86,10 @@ $ docker pull quay.io/gravitational/teleport:(=teleport.version=)
 
 ## Helm
 
-Please follow our [Helm Chart Readme](https://github.com/gravitational/teleport/tree/master/examples/chart/teleport) for install and setup instructions.
+Please follow our [Getting Started with Kubernetes Access](./kubernetes-access/getting-started.mdx) or [Helm Chart Readme](https://github.com/gravitational/teleport/tree/master/examples/chart/teleport) for install and setup instructions.
 
 ```code
 $ helm repo add teleport https://charts.releases.teleport.dev
-$ helm install teleport teleport/teleport
 ```
 
 ## MacOS
