removed period from heading

--- a/docs/pages/application-access/guides/aws-console.mdx
+++ b/docs/pages/application-access/guides/aws-console.mdx
@@ -32,7 +32,7 @@ AWS provides the `ReadOnlyAccess` and `PowerUserAccess` IAM policies that can be
 These policies may provide too much or not enough access for your intentions. Validate these meet your expectations if you plan on using them.
 </Admonition>
 
-### Create the example Read Only Roles.
+### Create the example Read Only Roles
 
 Go to the IAM -> Access Management -> [Roles](https://console.aws.amazon.com/iamv2/home#/roles).
 Press Create Role.
