Fix broken link and meta issue

--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting started
-description: Getting started with Teleport - identity-aware, multi-protocol access proxy for SSH, HTTPS, Kubernetes, and more.
+description: This tutorial will guide you through the steps needed to install and run Teleport 7.1.0 on Linux machines.
 videoBanner: jvaCmQyHghY
 ---
 
