--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting started
-description: This tutorial will guide you through the steps needed to install and run Teleport 7.1.0 on Linux machines.
+description: Getting started with Teleport - This tutorial will guide you through the steps needed to install and run Teleport 7.1.0 on Linux machines.
 videoBanner: jvaCmQyHghY
 ---
 
