--- a/docs/pages/application-access/guides/aws-console.mdx
+++ b/docs/pages/application-access/guides/aws-console.mdx
@@ -24,7 +24,7 @@ This guide will explain how to:
 - AWS EC2 or other instance where you can assign a IAM Security Role for the Teleport Agent
 
 
-## Step 1. Configure Read Only and Power User Roles
+## Step 1. Configure Read Only and Power User roles
 
 AWS provides the `ReadOnlyAccess` and `PowerUserAccess` IAM policies that can be incorporated into roles.
 
