--- a/docs/pages/application-access/guides/aws-console.mdx
+++ b/docs/pages/application-access/guides/aws-console.mdx
@@ -12,7 +12,7 @@ appropriate IAM roles.
 This guide will explain how to:
 
 - Connect your AWS account(-s) to Teleport.
-- Setup example AWS IAM Read Only and Power User Roles
+- Setup example AWS IAM Read Only and Power User roles.
 - Use Teleport's role-based access control with AWS IAM roles.
 - View Teleport users' AWS console activity in CloudTrail.
 
