--- a/docs/pages/application-access/guides/aws-console.mdx
+++ b/docs/pages/application-access/guides/aws-console.mdx
@@ -21,7 +21,7 @@ This guide will explain how to:
 - Teleport with Application Access. Follow [Getting Started](../getting-started.mdx)
   or [Connecting Apps](./connecting-apps.mdx) guides to get it running.
 - IAM permissions in the AWS account you want to connect.
-- AWS EC2 or other instance where you can assign a IAM Security Role for the Teleport Agent
+- AWS EC2 or other instance where you can assign a IAM Security Role for the Teleport Agent.
 
 
 ## Step 1. Configure Read Only and Power User roles
