--- a/docs/pages/application-access/guides/aws-console.mdx
+++ b/docs/pages/application-access/guides/aws-console.mdx
@@ -47,7 +47,7 @@ Press Next and Select the `ReadOnlyAccess`.  Sorting the Policy Name table from 
 
 Press next through the tags
 
-### Confirm Roles
+### Confirm role
 
 Enter a role name and press create role.
 
