--- a/docs/pages/application-access/guides/aws-console.mdx
+++ b/docs/pages/application-access/guides/aws-console.mdx
@@ -62,7 +62,7 @@ Follow the same steps and select `PowerUserAccess` IAM Policy to create a `Examp
 ## Step 2. Update IAM roles trust relationships
 
 <Admonition type="note">
-This step is only required if you are allowing access from another account.  The trust relationship will already exist for the same account
+This step is only required if you are allowing access from another account.  The trust relationship will already exist for the same account.
 </Admonition>
 
 Teleport uses AWS [Federation](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_providers_enable-console-custom-url.html)
