--- a/docs/pages/preview/upcoming-releases.mdx
+++ b/docs/pages/preview/upcoming-releases.mdx
@@ -8,26 +8,26 @@ The teleport team delivers a new major release roughly every 3 months.
 
 ## Teleport
 
-### Teleport 7.1
-
-Teleport 7.1 will focus on [session termination and user locking](https://github.com/gravitational/teleport/issues/3360) and additional FedRAMP compliance controls which were delayed from 7.0 due to timing constraints.
-
-| Version | Date              | Description         |
-| ------- | ----------------- | ------------------- |
-| Release | August 23rd, 2021 | Production release. |
-
-You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/58).
-
 ### Teleport 7.2
 
-Teleport 7.2 will focus on [HSMs](https://github.com/gravitational/teleport/issues/4225), [simplified node joining](https://github.com/gravitational/teleport/issues/7145), and UX improvements which were delayed from 7.0 due to timing constraints.
+Teleport 7.2 will focus on [HSMs](https://github.com/gravitational/teleport/issues/4225), [improving `tsh.exe` experience on Windows](https://github.com/gravitational/teleport/issues/7445), and performance and stability enhancements.
 
 You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/60).
 
 | Version                                                                               | Date                | Description                            |
 | ------------------------------------------------------------------------------------- | ------------------- | -------------------------------------- |
 | [7.2.0-beta.1](https://github.com/gravitational/teleport/releases/tag/v7.2.0-beta.1)  | August 19th, 2021   | Only for pre-production envioronments. |
-| Release                                                                               | September 6th, 2021 | Production release.                    |
+| Release                                                                               | September 20th, 2021 | Production release.                    |
+
+### Teleport 7.3
+
+Teleport 7.3 will focus on [simplified node joining](https://github.com/gravitational/teleport/issues/7145).
+
+| Version    | Date              | Description         |
+| ---------- | ----------------- | ------------------- |
+| Release    | October 4th, 2021 | Production release. |
+
+You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/62).
 
 ## Teleport Cloud "Washington"
 
