moves sso, labels and nodes to setup

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -51,7 +51,7 @@ Teleport is a Certificate Authority and an Access Plane for your infrastructure.
   </TileListItem>
   </TileList>
   <TileList title="For security teams" icon="lock">
-    <TileListItem href="./openssh.mdx">
+    <TileListItem href="./server-access/guides/openssh.mdx">
      Capture sessions and manage certificates for existing OpenSSH fleet.
     </TileListItem>
     <TileListItem href="./architecture/authentication.mdx#issuing-user-certificates">
