--- a/docs/pages/production.mdx
+++ b/docs/pages/production.mdx
@@ -121,7 +121,7 @@ to a Teleport daemon manually.
 ### Adding Nodes to the cluster
 
 We've written a dedicated guide on [Adding Nodes to your
-Cluster](admin-guide.mdx#adding-nodes-to-the-cluster) which shows how to generate or set join tokens and
+Cluster](./setup/admin/adding-nodes.mdx) which shows how to generate or set join tokens and
 use them to add nodes.
 
 ## Security considerations
