--- a/docs/pages/access-controls/reference.mdx
+++ b/docs/pages/access-controls/reference.mdx
@@ -204,7 +204,7 @@ Label              | `v3` Default   | `v4` Default
 ## RBAC for hosts
 
 A Teleport role can also define which hosts (nodes) a user can have access to.
-This works by [labeling nodes](../admin-guide.mdx#labeling-nodes-and-applications) and listing
+This works by [labeling nodes](../setup/admin/labels.mdx) and listing
 allow/deny labels in a role definition.
 
 Consider the following use case:
