--- a/docs/pages/enterprise/getting-started.mdx
+++ b/docs/pages/enterprise/getting-started.mdx
@@ -377,7 +377,7 @@ configuring SSO providers:
 - [Okta](sso/okta.mdx)
 - [Active Directory](sso/adfs.mdx)
 - [One Login](sso/one-login.mdx)
-- [Github](../admin-guide.mdx#github-oauth-20)
+- [Github](../setup/admin/github-sso.mdx)
 
 Any SAML-compliant provider can be configured with Teleport by following the
 same steps.  There are Teleport Enterprise customers who are using Oracle IDM,
