--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -30,14 +30,14 @@ Admin Manual.
 ### Can I connect to nodes behind a firewall?
 
 Yes, Teleport supports reverse SSH tunnels out of the box. To configure
-behind-firewall clusters refer to [Trusted Clusters](admin-guide.mdx#trusted-clusters)
+behind-firewall clusters refer to [Trusted Clusters](./setup/admin/trustedclusters.mdx)
 section of the Admin Manual.
 
 ### Can individual nodes create reverse tunnels to a proxy server without creating a new cluster?
 
 This was a popular customer [request](https://github.com/gravitational/teleport/issues/803) that was added several in 4.0. 
 Once you've upgraded your Teleport Cluster, change the node config option `--auth-server` to point to web proxy address (this would be `public_addr` and `web_listen_addr`
-in file configuration). As defined in [Adding a node located behind NAT - Teleport Node Tunneling](admin-guide.mdx#adding-a-node-located-behind-nat)
+in file configuration). As defined in [Adding a node located behind NAT - Teleport Node Tunneling](./setup/admin/adding-nodes.mdx#adding-a-node-located-behind-nat)
 
 ### Can nodes use a single port for reverse tunnels?
 
