--- a/docs/pages/kubernetes-access/helm/reference.mdx
+++ b/docs/pages/kubernetes-access/helm/reference.mdx
@@ -1276,7 +1276,7 @@ You can specify multiple databases by adding additional list elements.
   --set "databases[1].uri=mysql-instance-1.xxx.us-east-1.rds.amazonaws.com:3306" \
   --set "databases[1].protocol=mysql" \
   --set "databases[1].aws.region=us-east-1" \
-  --set "databases[1].static_labels.env=staging" \
+  --set "databases[1].static_labels.env=staging"
   ```
 
   <Admonition type="note">
@@ -1421,7 +1421,7 @@ These labels can then be used with Teleport's RBAC policies to define access rul
   To set labels for applications, add a `labels` element to the [`apps`](#apps) section.
   To set labels for databases, add a `static_labels` element to the [`databases`](#databases) section.
 
-  For more information on how to set static/dynamic labels for Teleport services, see [labelling nodes and applications](../../admin-guide.mdx#labeling-nodes-and-applications).
+  For more information on how to set static/dynamic labels for Teleport services, see [labelling nodes and applications](../../setup/admin/labels.mdx).
 </Admonition>
 
 <Tabs>
