--- a/docs/pages/setup/admin.mdx
+++ b/docs/pages/setup/admin.mdx
@@ -5,6 +5,12 @@ layout: tocless-doc
 ---
 
 <TileSet>
+  <Tile icon="wrench" title="Github SSO" href="./admin/github-sso.mdx">
+    Setup single sign-on with Github.
+  </Tile>
+  <Tile icon="wrench" title="Adding nodes" href="./admin/adding-nodes.mdx">
+    How to add new nodes to the cluster.
+  </Tile>
   <Tile icon="wrench" title="Troubleshooting" href="./admin/troubleshooting.mdx">
     Collect metrics and diagnostic information from Teleport.
   </Tile>
@@ -13,5 +19,8 @@ layout: tocless-doc
   </Tile>
   <Tile icon="wrench" title="Signals and Graceful Restarts" href="./admin/graceful-restarts.mdx">
     Send signals to configure and restart Teleport without loosing connections.
+  </Tile>
+  <Tile icon="wrench" title="Trusted Clusters" href="./admin/trustedclusters.mdx">
+    Connect multiple Teleport clusters using Trusted Clusters.
   </Tile>
 </TileSet>
