--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -314,6 +314,6 @@ Check out our collection of step-by-step guides for common Teleport tasks.
 - [Admin Guide](../admin-guide.mdx)
 - [Share Sessions](../user-manual.mdx#sharing-sessions)
 - [Manage Users](../setup/admin/users.mdx)
-- [Github SSO](../admin-guide.mdx#github-oauth-20)
-- [Label Nodes](../admin-guide.mdx#labeling-nodes-and-applications)
+- [Github SSO](../setup/admin/github-sso.mdx)
+- [Label Nodes](../setup/admin/labels.mdx)
 - [Teleport with OpenSSH](../server-access/guides/openssh.mdx)
