moves sso, labels and nodes to setup

--- a/docs/pages/kubernetes-access/helm/reference.mdx
+++ b/docs/pages/kubernetes-access/helm/reference.mdx
@@ -1276,7 +1276,7 @@ You can specify multiple databases by adding additional list elements.
   --set "databases[1].uri=mysql-instance-1.xxx.us-east-1.rds.amazonaws.com:3306" \
   --set "databases[1].protocol=mysql" \
   --set "databases[1].aws.region=us-east-1" \
-  --set "databases[1].static_labels.env=staging" \
+  --set "databases[1].static_labels.env=staging"
   ```
 
   <Admonition type="note">
