--- a/docs/pages/admin-guide.mdx
+++ b/docs/pages/admin-guide.mdx
@@ -96,14 +96,13 @@ teleport:
   # (https://goteleport.com/teleport/docs/admin-guide/#adding-nodes-to-the-cluster).
   ca_pin: "sha256:ca-pin-hash-goes-here"
 
-  # List of auth servers in a cluster. you will have more than one auth server
-  # if you configure teleport auth to run in High Availability configuration.
+  # Auth Server address and port to connect to. If you configure teleport auth to run in High
+  # Availability configuration the address should point to a Load Balancer.
   # If adding a node located behind NAT, use the Proxy URL. e.g.
   #  auth_servers:
   #     - teleport-proxy.example.com:3080
   auth_servers:
       - 10.1.0.5:3025
-      - 10.1.0.6:3025
 
   # Logging configuration. Possible output values to disk via '/var/lib/teleport/teleport.log',
   # 'stdout', 'stderr' and 'syslog'. Possible severity values are INFO, WARN
