--- a/docs/pages/setup/reference/config.mdx
+++ b/docs/pages/setup/reference/config.mdx
@@ -47,14 +47,13 @@ teleport:
     # This value can be specified as FQDN e.g. host.example.com
     advertise_ip: 10.1.0.5
 
-    # List of auth servers in a cluster. you will have more than one auth server
-    # if you configure teleport auth to run in High Availability configuration.
+    # Auth Server address and port to connect to. If you configure teleport auth to run in High
+    # Availability configuration the address should point to a Load Balancer.
     # If adding a node located behind NAT, use the Proxy URL. e.g.
     #  auth_servers:
-    #     - teleport-proxy.example.com:3080
+    #     - teleport-proxy.example.com:443
     auth_servers:
         - 10.1.0.5:3025
-        - 10.1.0.6:3025
 
     # For use on a Teleport Proxy
     # See the "Teleport Scalability Tweaks" of the admin manual
