dupe titles and descriptions

--- a/docs/pages/kubernetes-access/getting-started/cluster.mdx
+++ b/docs/pages/kubernetes-access/getting-started/cluster.mdx
@@ -1,6 +1,6 @@
 ---
-title: Getting Started with Kubernetes Access
-description: Getting started with Teleport Kubernetes Access.
+title: Deploy Teleport in a Kubernetes with SSO 
+description: Getting started with by deploying Teleport in a Kubernetes with SSO and Audit logs.
 ---
 
 # Getting Started
