correct role mapping in auth connector in gitlab

--- a/docs/pages/enterprise/sso/gitlab.mdx
+++ b/docs/pages/enterprise/sso/gitlab.mdx
@@ -79,7 +79,7 @@ spec:
     value: gitlab-admin
   - claim: groups
     roles:
-    - admin
+    - dev
     value: gitlab-dev
   client_id: Application_ID
   client_secret: Secret
