--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -1,6 +1,7 @@
 ---
-title: Getting started
-description: Getting started with Teleport on a Linux server
+title: Getting started with Teleport on a Linux server
+description: This tutorial will guide you through the steps needed to install and run
+Teleport on a Linux server
 videoBanner: jvaCmQyHghY
 ---
 
