--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -1,5 +1,5 @@
 ---
-title: Getting started with Teleport on a Linux server
+title: Getting started on a Linux Server
 description: This tutorial will guide you through the steps needed to install and run
 Teleport on a Linux server
 videoBanner: jvaCmQyHghY
