--- a/docs/pages/kubernetes-access/getting-started/cluster.mdx
+++ b/docs/pages/kubernetes-access/getting-started/cluster.mdx
@@ -1,6 +1,6 @@
 ---
-title: Getting Started with Kubernetes Access
-description: Getting started with Teleport Kubernetes Access.
+title: Getting Started - Kubernetes with SSO
+description: Getting started with Teleport. Let's deploy Teleport in a Kubernetes with SSO and Audit logs
 videoBanner: VPGYLEMTdJ8
 ---
 
