--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -1,6 +1,6 @@
 ---
-title: Getting started
-description: Getting started with Teleport - identity-aware, multi-protocol access proxy for SSH, HTTPS, Kubernetes, and more.
+title: Getting started on a Linux Server
+description: This tutorial will guide you through the steps needed to install and run Teleport on a Linux server
 videoBanner: jvaCmQyHghY
 ---
 
