--- a/docs/pages/kubernetes-access/getting-started/cluster.mdx
+++ b/docs/pages/kubernetes-access/getting-started/cluster.mdx
@@ -1,6 +1,6 @@
 ---
-title: Getting Started with Kubernetes Access
-description: Getting started with Teleport Kubernetes Access.
+title: Getting Started - Kubernetes with SSO
+description: Getting started with Teleport. Let's deploy Teleport in a Kubernetes with SSO and Audit logs
 videoBanner: VPGYLEMTdJ8
 ---
 
@@ -46,7 +46,7 @@ Let's start with a single-pod Teleport using persistent volume as a backend.
     $ kubectl config set-context --current --namespace=teleport-cluster-ent
 
     # Get a license from Teleport and create a secret "license" in the namespace teleport-cluster-ent
-    $ kubectl -n teleport-cluster-ent create secret generic license --from-file=license-enterprise.pem
+    $ kubectl -n teleport-cluster-ent create secret generic license --from-file=license.pem
 
     # Install Teleport
     $ helm install teleport-cluster teleport/teleport-cluster --namespace=teleport-cluster-ent \
