--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -1,7 +1,6 @@
 ---
 title: Getting started on a Linux Server
-description: This tutorial will guide you through the steps needed to install and run
-Teleport on a Linux server
+description: This tutorial will guide you through the steps needed to install and run Teleport on a Linux server
 videoBanner: jvaCmQyHghY
 ---
 
