--- a/docs/pages/server-access/guides/ansible.mdx
+++ b/docs/pages/server-access/guides/ansible.mdx
@@ -19,7 +19,7 @@ and run a sample ansible playbook.
 
 ## Step 1/3. Login and configure SSH
 
-Login into Teleport with `tsh` tool:
+Log into Teleport with `tsh`:
 
 ```code
 $ tsh login --proxy=example.com
