Update video to reflect RBAC changes and updates in Teleport 7

--- a/docs/pages/setup/admin/github-sso.mdx
+++ b/docs/pages/setup/admin/github-sso.mdx
@@ -1,7 +1,7 @@
 ---
 title: GitHub SSO
 description: Setting up Github SSO
-videoBanner: CWOkKi9NicA
+videoBanner: XjgN2WWFCX8
 ---
 
 This guide explains how to set up Github SSO with Open Source, Enterprise Teleport,
