Splits admin guide into setup sections
* Updates scaling guide.
* Rewrites CA rotation guide.
* Small tweaks and fixes to other parts.

--- a/docs/pages/access-controls/guides/per-session-mfa.mdx
+++ b/docs/pages/access-controls/guides/per-session-mfa.mdx
@@ -14,7 +14,7 @@ that protects users against compromises of their on-disk Teleport certificates.
   Per-session U2F checks don't apply to regular Teleport logins (`tsh login` or
   logging into the Web UI). We encourage you to enable login MFA in your SSO
   provider and/or for all [local Teleport
-  users](../../admin-guide.mdx#local-connector).
+  users](../../setup/reference/authentication.mdx#local).
 </Admonition>
 
 <Admonition type="warning">
