--- a/docs/pages/architecture/overview.mdx
+++ b/docs/pages/architecture/overview.mdx
@@ -6,7 +6,7 @@ h1: Architecture Introduction
 
 This guide is for those looking for a deeper understanding of Teleport. If you
 are looking for hands-on instructions on how to set up Teleport for your team,
-check out the [Admin Guide](../admin-guide.mdx)
+check out the [Admin Guide](../setup/admin.mdx)
 
 ## What makes Teleport different
 
@@ -184,7 +184,7 @@ sending the session history to the auth server to be stored.
   title="Note"
 >
   Teleport may also be configured to have the session recording
-  occur on the proxy, see [Audit Log](../admin-guide.mdx#audit-log) for more
+  occur on the proxy, see [Audit Reference](../setup/reference/audit.mdx) for more
   information.
 </Admonition>
 
@@ -243,13 +243,13 @@ nodes and users in the cluster.
 `tctl` is also a tool that can be used to modify the dynamic configuration of
 the cluster, like creating new user roles or connecting trusted clusters.
 
-You can learn more about `tctl` in the [Admin Manual](../admin-guide.mdx).
+You can learn more about `tctl` in the [Admin Manual](../setup/admin.mdx).
 
 ## Next steps
 
 - If you haven't already, read the [Getting Started Guide](../getting-started.mdx) to run a
   minimal setup of Teleport yourself.
-- Set up Teleport for your team with the [Admin Guide](../admin-guide.mdx).
+- Set up Teleport for your team with the [Admin Guide](../setup/admin.mdx).
 
 Read the rest of the Architecture Guides:
 
