--- a/docs/pages/enterprise/getting-started.mdx
+++ b/docs/pages/enterprise/getting-started.mdx
@@ -175,7 +175,7 @@ You can review the logs of the Teleport service with `journalctl -fu teleport` a
 with `sudo systemctl status teleport`.
 
 You can use `netstat -lptne` to review the port that Teleport is
-listening on  on [TCP/IP ports](../admin-guide.mdx#ports). On *auth.example.com*, it should
+listening on  on [TCP/IP ports](../setup/reference/networking.mdx#ports). On *auth.example.com*, it should
 look something like this:
 
 ```bsh
