--- a/docs/pages/installation.mdx
+++ b/docs/pages/installation.mdx
@@ -121,7 +121,7 @@ $ helm install teleport teleport/teleport
       `tctl` are compatible with the versions you run server-side.  Homebrew usually
       ships the latest release of Teleport, which may be incompatible with older
       versions.  See our [compatibility
-      policy](admin-guide.mdx#component-compatibility) for details.
+      policy](./setup/operations/upgrading.mdx) for details.
     </Admonition>
   </TabItem>
 
