--- a/docs/pages/server-access/guides/restricted-session.mdx
+++ b/docs/pages/server-access/guides/restricted-session.mdx
@@ -50,7 +50,7 @@ Network restrictions work similar to a firewall but with several differences:
 Follow our [installation instructions](../../installation.mdx) to install Teleport Auth, Proxy
 and Nodes.
 
-Set up the Teleport node with this `/etc/teleport.yaml`. See our [configuration file setup](../../admin-guide.mdx#configuration) for more instructions.
+Set up the Teleport node with this `/etc/teleport.yaml`. See our [configuration file setup](../../setup/reference/config.mdx) for more instructions.
 
 <Admonition type="note">
   Restricted Session requires Enhanced Recording to be enabled as well. This requirement will be removed in the future.
