--- a/docs/pages/setup/deployments/aws-terraform.mdx
+++ b/docs/pages/setup/deployments/aws-terraform.mdx
@@ -706,7 +706,7 @@ To add new nodes/EC2 servers that you can "SSH into" you'll need to:
 
 - [Install the Teleport binary on the Server](../../installation.mdx)
 - [Run Teleport - we recommend using systemd](../admin/daemon.mdx#systemd-unit-file)
-- [Set the correct settings in /etc/teleport.yaml](../../admin-guide.mdx#configuration-file)
+- [Set the correct settings in /etc/teleport.yaml](../reference/config.mdx)
 - [Add nodes to the Teleport cluster](../admin/adding-nodes.mdx#adding-nodes-to-the-cluster)
 
 ### Getting the CA pin hash
