--- a/docs/pages/access-controls/guides/u2f.mdx
+++ b/docs/pages/access-controls/guides/u2f.mdx
@@ -116,7 +116,7 @@ $ tsh login --proxy=example.com
 
 <Admonition type="note">
 U2F for logging into Teleport is only required for [local
-users](../../admin-guide.mdx#local-connector). SSO users should configure
+users](../../setup/reference/authentication.mdx#local). SSO users should configure
 multi-factor authentication in their SSO provider.
 </Admonition>
 
