--- a/docs/pages/architecture/proxy.mdx
+++ b/docs/pages/architecture/proxy.mdx
@@ -113,7 +113,7 @@ prevent sessions logs from reaching the Auth Service. With sessions recorded at
 the proxy, users with root privileges on Nodes have no way of disabling the
 audit.
 
-See the [admin guide](../admin-guide.mdx#recorded-sessions) to learn how to turn
+See the [reference](../setup/reference/audit.mdx#recorded-sessions) to learn how to turn
 on the recording proxy mode. Note that the recording mode is configured on the
 Auth Service.
 
