--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -163,7 +163,7 @@ Here's a selection of compatible two-factor authentication apps:
       If you choose to use Homebrew, you must verify that the versions of `tsh` and
       `tctl` are compatible with the versions you run server-side. Homebrew usually
       ships the latest release of Teleport, which may be incompatible with older
-      versions. See our [compatibility policy](../admin-guide.mdx#component-compatibility) for details.
+      versions. See our [compatibility policy](../setup/operations/upgrading.mdx#component-compatibility) for details.
     </Admonition>
   </TabItem>
 
@@ -311,7 +311,7 @@ Add a new application:
 Check out our collection of step-by-step guides for common Teleport tasks.
 
 - [Install Teleport](../installation.mdx)
-- [Admin Guide](../admin-guide.mdx)
+- [Admin Guides](../setup/admin.mdx)
 - [Share Sessions](../user-manual.mdx#sharing-sessions)
 - [Manage Users](../setup/admin/users.mdx)
 - [Github SSO](../setup/admin/github-sso.mdx)
