--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -68,10 +68,10 @@ Teleport is a Certificate Authority and an Access Plane for your infrastructure.
     <TileListItem href="./user-manual.mdx#sharing-sessions">
       Collaborate through session sharing.
     </TileListItem>
-    <TileListItem href="./admin-guide.mdx#labeling-nodes-and-applications">
+    <TileListItem href="./setup/admin/labels.mdx">
       Discover servers and clusters with dynamic node labels.
     </TileListItem>
-    <TileListItem href="./admin-guide.mdx#adding-a-node-located-behind-nat">
+    <TileListItem href="./setup/admin/adding-nodes.mdx#adding-a-node-located-behind-nat">
      Connect to computing resources located behind firewalls or without static IPs.
     </TileListItem>
   </TileList>
