--- a/docs/pages/server-access/getting-started.mdx
+++ b/docs/pages/server-access/getting-started.mdx
@@ -334,7 +334,7 @@ Feel free to shut down, clean up, and delete your resources or use them in furth
 
 - Learn more about Teleport `tsh` through the [reference documentation](../setup/reference/cli.mdx#tsh-ssh).
 - Learn more about [Teleport Nodes](../architecture/nodes.mdx#connecting-to-nodes)
-- For a complete list of ports used by Teleport, read [The Admin Guide](../admin-guide.mdx#ports).
+- For a complete list of ports used by Teleport, read [The Admin Guide](../setup/reference/networking.mdx).
 
 ## Resources
 
