--- a/docs/pages/server-access/guides/bpf-session-recording.mdx
+++ b/docs/pages/server-access/guides/bpf-session-recording.mdx
@@ -59,7 +59,7 @@ $ uname -r
 Follow our [installation instructions](../../installation.mdx) to install Teleport Auth, Proxy
 and Nodes.
 
-Set up the Teleport node with this `etc/teleport.yaml`. See our [configuration file setup](../../admin-guide.mdx#configuration) for more instructions.
+Set up the Teleport node with this `etc/teleport.yaml`. See our [configuration file setup](../../setup/reference/config.mdx) for more instructions.
 
 ```yaml
 # Example config to be saved as etc/teleport.yaml
