--- a/docs/pages/server-access/guides/ssh-pam.mdx
+++ b/docs/pages/server-access/guides/ssh-pam.mdx
@@ -307,7 +307,7 @@ biometrics.
 
 Note that Teleport enables strong SSH authentication out of the box using
 certificates. For most users, hardening [the initial Teleport
-authentication](../../admin-guide.mdx#authentication) (e.g. `tsh login`) is preferred.
+authentication](../../setup/reference/authentication.mdx) (e.g. `tsh login`) is preferred.
 
 By default, `auth` modules are not used to avoid the default system behavior
 (usually using local Unix passwords). You can enable them by setting
