--- a/docs/pages/getting-started/linux-server.mdx
+++ b/docs/pages/getting-started/linux-server.mdx
@@ -312,7 +312,7 @@ Check out our collection of step-by-step guides for common Teleport tasks.
 
 - [Install Teleport](../installation.mdx)
 - [Admin Guides](../setup/admin.mdx)
-- [Share Sessions](../user-manual.mdx#sharing-sessions)
+- [Share Sessions](../server-access/guides/tsh.mdx#sharing-sessions)
 - [Manage Users](../setup/admin/users.mdx)
 - [Github SSO](../setup/admin/github-sso.mdx)
 - [Label Nodes](../setup/admin/labels.mdx)
