Add 7.0, 7.1 to list supported in faq

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -122,6 +122,8 @@ Teleport provides security-critical support for the current and two previous rel
 
 | Release | Long Term Support | Release Date | Min tsh version |
 | - | - | - | - |
+| 7.1 | Yes | August 24th, 2021 | 6.0.0 |
+| 7 | Yes | August 10th, 2021 | 6.0.0 |
 | 6.2 | No | May 21th, 2021 | 3.0.0 |
 | 6.1 | No | April 9th, 2021 | 3.0.0|
 | 6 | Yes | March 4th, 2021 | 3.0.0 |
