--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -122,7 +122,7 @@ Teleport provides security-critical support for the current and two previous rel
 
 | Release | Long Term Support | Release Date | Min tsh version |
 | - | - | - | - |
-| 7.1 | Yes | August 24th, 2021 | 6.0.0 |
+| 7.1 | No | August 24th, 2021 | 6.0.0 |
 | 7 | Yes | August 10th, 2021 | 6.0.0 |
 | 6.2 | No | May 21th, 2021 | 3.0.0 |
 | 6.1 | No | April 9th, 2021 | 3.0.0|
